# hostcheck

./: .gitignore  .pre-commit-config.yaml  LICENCE  README.md  pyproject.toml  requirements.txt  tox.ini
src/: hostcheck.py
src/hostcheck/: cert.py  cmd.py  dns.py
tests/: dns_test.py
